# Herk-Gil-Werman-Fast-Morphology

./: CMakeLists.txt  README.md  buildDemo.py  fastMorphMatWrapper.hpp  matWrapper.hpp
demo/: CMakeLists.txt  compareEfficiencyWithOpenCV.cpp  erodeImage.cpp
